--- a/cloudflare_1000.html
+++ b/cloudflare_1000.html
@@ -505,7 +505,7 @@
             }
 
             .left-sec{
-                background-image: url('./images/bg-1x-mobile.png')!important;
+                background-image: url('./images/bg2-1x-tablet.png')!important;
             }
         }
 
@@ -533,7 +533,7 @@
             }
 
             .left-sec{
-                background-image: url('./images/bg-1x-tablet.png')!important;
+                background-image: url('./images/bg2-1x-tablet.png')!important;
             }
         }
 
@@ -654,7 +654,7 @@
     </style>
     <style type="text/css">
 .right-sec{
-    background-image: url('https://cdn.jsdelivr.net/gh/xian2333/img/2020/06/07/78468c.png');
+    background-image: url('https://irohahanasaku.github.io/images/bg2-1x-tablet.png');
     background-size: 100% 100%;
 }
 </style>
