--- a/cloudflare_1000.html
+++ b/cloudflare_1000.html
@@ -654,7 +654,7 @@
     </style>
     <style type="text/css">
 .right-sec{
-    background-image: url('https://irohahanasaku.github.io/images/bg2-1x-tablet.png');
+    background-image: url('https://irohahanasaku.github.io/images/bg2-1x-tablet.png.png');
     background-size: 100% 100%;
 }
 </style>
