--- a/cloudflare_1000.html
+++ b/cloudflare_1000.html
@@ -505,7 +505,7 @@
             }
 
             .left-sec{
-                background-image: url('./images/bg2-1x-tablet.png')!important;
+                background-image: url('./images/bg2-1x-tablet.png.png')!important;
             }
         }
 
@@ -533,7 +533,7 @@
             }
 
             .left-sec{
-                background-image: url('./images/bg2-1x-tablet.png')!important;
+                background-image: url('./images/bg2-1x-tablet.png.png')!important;
             }
         }
 
