--- a/cloudflare_500.html
+++ b/cloudflare_500.html
@@ -1,6 +1,6 @@
 
 <html lang="en"><head>
-    <title>无法连接到服务器 | INTEL-2333</title>
+    <title>Stop !! Senpai</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -505,7 +505,7 @@
             }
 
             .left-sec{
-                background-image: url('./images/bg-1x-mobile.png')!important;
+                background-image: url('./images/bg2-2x-tablet.png')!important;
             }
         }
 
@@ -533,7 +533,7 @@
             }
 
             .left-sec{
-                background-image: url('./images/bg-1x-tablet.png')!important;
+                background-image: url('./images/bg2-2x-tablet.png')!important;
             }
         }
 
@@ -654,7 +654,7 @@
     </style>
     <style type="text/css">
 .right-sec{
-    background-image: url('https://cdn.jsdelivr.net/gh/xian2333/img/2020/06/07/bd9a92.png');
+    background-image: url('https://irohahanasaku.github.io/images/bg2-2x-tablet.png');
     background-size: 100% 100%;
 }
 </style>
@@ -667,15 +667,15 @@
                 <div class="text-black text-5xl md:text-15xl font-black">等一下下吖ˋ( ° ▽、° ) </div>
 
                 <p class="text-grey-darker text-2xl md:text-3xl mb-7 leading-normal">
-                    </p><p class="sub-header"><h1>你无法访问cattery.work哦，我们会检查一下什么问题哒！！[应该不会很久叭!]</h1></p>
+                    </p><p class="sub-header"><h1>Aaaaaaaa.... Stoppu !!!! [Baka!]</h1></p>
                     <br><br>
                 ::CLOUDFLARE_ERROR_500S_BOX::
 
                  <div class="sub-footer">
                     <div class="w-full h-2 bg-grey-light my-3 md:my-6"></div>
                     <ul>
-                        <li>Cloudflare事件ID: ::RAY_ID::</li>
-                        <li>你的IP: ::CLIENT_IP::</li>
+                        <li>Cloudflare ID: ::RAY_ID::</li>
+                        <li>IP: ::CLIENT_IP::</li>
                         <li>Performance &amp; Security by Cloudflare</li>
                     </ul>
                 </div> 
