--- a/cloudflare_500.html
+++ b/cloudflare_500.html
@@ -664,7 +664,7 @@
     <div class="md:flex min-h-screen main-body">
         <div class="w-full md:w-1/2 bg-white flex items-center justify-center left-sec">
             <div class="max-w-sm m-8 content-body">
-                <div class="text-black text-5xl md:text-15xl font-black">等一下下吖ˋ( ° ▽、° ) </div>
+                <div class="text-black text-5xl md:text-15xl font-black">ˋ( ° ▽、° ) </div>
 
                 <p class="text-grey-darker text-2xl md:text-3xl mb-7 leading-normal">
                     </p><p class="sub-header"><h1>Aaaaaaaa.... Stoppu !!!! [Baka!]</h1></p>
