--- a/cloudflare_1000.html
+++ b/cloudflare_1000.html
@@ -1,6 +1,6 @@
-
+<!-----老兄de博客-Github url：https://github.com/laoxong/CloudflareCustomPages ----->
 <html lang="en"><head>
-    <title>Chotto Matte | やめる</title>
+    <title>域名解析错误 | 老兄</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -341,7 +341,7 @@
         }
 
         .max-w-sm {
-            max-width: 40rem;
+            max-width: 30rem;
         }
 
         .min-h-screen {
@@ -505,7 +505,7 @@
             }
 
             .left-sec{
-                background-image: url('./images/bg2-1x-tablet.png.png')!important;
+                background-image: url('https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0583813/ACG/images/bg-1x-mobile.png')!important;
             }
         }
 
@@ -533,7 +533,7 @@
             }
 
             .left-sec{
-                background-image: url('./images/bg2-1x-tablet.png.png')!important;
+                background-image: url('https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0583813/ACG/images/bg-1x-tablet.png')!important;
             }
         }
 
@@ -544,7 +544,7 @@
         }
 
         .left-sec{
-            background-image: url('./images/bg-1x.jpg');
+            background-image: url('https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0583813/ACG/images/bg-1x.jpg');
             background-position: bottom;
             background-size: contain;
             background-repeat: no-repeat;
@@ -654,7 +654,7 @@
     </style>
     <style type="text/css">
 .right-sec{
-    background-image: url('https://irohahanasaku.github.io/images/bg2-1x-tablet.png.png');
+    background-image: url('https://cdn.jsdelivr.net/gh/laoxong/CloudflareCustomPages@0583813/ACG/images/challenge-for-country-1x.jpg');
     background-size: 100% 100%;
 }
 </style>
@@ -664,19 +664,18 @@
     <div class="md:flex min-h-screen main-body">
         <div class="w-full md:w-1/2 bg-white flex items-center justify-center left-sec">
             <div class="max-w-sm m-8 content-body">
-                <div class="text-black text-5xl md:text-15xl font-black">(=•ω＜=)ρ⌒☆</div>
+                <div class="text-black text-5xl md:text-15xl font-black">等一下下吖ο(=•ω＜=)ρ⌒☆</div>
 
                 <p class="text-grey-darker text-2xl md:text-3xl mb-7 leading-normal">
-                    </p><p class="sub-header"><h1>Oops!!Chotto Matte！[Yameru!]</h1></p>
+                    </p><p class="sub-header"><h1>Oops!!好像又翻车惹，我们会尽快恢复的啦！[应该不会很久叭!]</h1></p>
                     <br><br>
                 ::CLOUDFLARE_ERROR_1000S_BOX::
 
                  <div class="sub-footer">
                     <div class="w-full h-2 bg-grey-light my-3 md:my-6"></div>
                     <ul>
-                        <li>Cloudflare ID: ::RAY_ID::</li>
-                        <li>IP: ::CLIENT_IP::</li>
-                        <li>Performance &amp; Security by Cloudflare</li>
+                        <li>Cloudflare事件ID: ::RAY_ID::</li>
+                        <li>你的IP: ::CLIENT_IP::</li>
                     </ul>
                 </div> 
 
@@ -686,6 +685,5 @@
         <div class="relative pb-full md:flex md:pb-0 md:min-h-screen w-full md:w-1/2 right-sec">
         </div>
     </div>
-
 
 </body></html>
